# PrimerProyectoPOO

./: Informe de autoevaluación.docx  README.md
Primer Proyecto/: CMakeLists.txt  Jet.cpp  Jet.h  aeronave.cpp  aeronave.h  avion.cpp  avion.h  helicoptero.cpp  helicoptero.h  main.cpp  pasajero.cpp  pasajero.h  persona.cpp  persona.h  puertaEmbarque.cpp  puertaEmbarque.h  tripulacion.cpp  tripulacion.h  vuelo.cpp  vuelo.h
